[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["Guoqing ZHANG <tjsimpletg@gmail.com>"]
readme = "README.md"
packages = [{include = "rp_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
