[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["Guoqing ZHANG <tjsimpletg@gmail.com>"]
readme = "README.md"
packages = [{include = "src/rp_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
coverage = "^6.5.0"
pylint = "^2.15.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
